# manning_ml

./: .gitignore  README.md  pyproject.toml
Chapter_03_Linear_Regression/: Coding_linear_regression.ipynb  DEPRECATED_Coding_linear_regression.ipynb  DEPRECATED_House_price_predictions.ipynb  House_price_predictions.ipynb  README.md  UPDATED_House_price_predictions.ipynb
Chapter_04_Testing_Overfitting_Underfitting/: DEPRECATED_Polynomial_regression_regularization.ipynb  Polynomial_regression_regularization.ipynb
Chapter_05_Perceptron_Algorithm/: Coding_perceptron_algorithm.ipynb  DEPRECATED_Coding_perceptron_algorithm.ipynb  README.md  exercise1.csv  exercises.ipynb
Chapter_06_Logistic_Regression/: Coding_logistic_regression.ipynb  DEPRECATED_Coding_logistic_regression.ipynb  DEPRECATED_Sentiment_analysis_IMDB.ipynb  README.md  Sentiment_analysis_IMDB.ipynb
Chapter_10_Neural_Networks/: House_price_predictions_neural_network.ipynb  Plotting_Boundaries.ipynb
Chapter_11_Support_Vector_Machines/: Calculating_similarities.ipynb  DEPRECATED_Calculating_similarities.ipynb
Chapter_13_End_to_end_example/: End_to_end_example.ipynb  README.md
tests/: tf_test.py
