[project]
name = "ml-manning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "pandas-stubs",
    "pydotplus",
    "scikit-learn",
    "tensorflow",
    "xgboost",

    # tf cuda deps
#    "nvidia-cublas-cu12",
#    "nvidia-cuda-cupti-cu12",
#    "nvidia-cuda-nvcc-cu12",
#    "nvidia-cuda-nvrtc-cu12",
#    "nvidia-cuda-runtime-cu12",
#    "nvidia-cudnn-cu12",
#    "nvidia-cufft-cu12",
#    "nvidia-curand-cu12",
#    "nvidia-cusolver-cu12",
#    "nvidia-cusparse-cu12",
##    "nvidia-nccl-cu12",
#    "nvidia-nvjitlink-cu12",
]
